# rhit-layout

./: .gitignore  README.md  build_periscope.sh  comms.html  control.html  gen_pythra.js  index.html  inner.html  input.html  inputs.html  package.json  players.json  server.js  sgg.js  sparkle.html  start.sh  tcp_listener.js  tcp_server.js  vwr.html  windows.css
elements/: center.jsx  main.jsx  sar.jsx  side.jsx
elements/comms/: commentator.jsx
elements/control/: comms_block.jsx  player.jsx
elements/inputs/: display.jsx
icons/: key.json  key.txt
inponly/: i.txt  server.js
libscope/: Makefile
libscope/include/: config.h  ipc.h  ipc_server.h
libscope/src/: config.c  ipc.c  ipc_server.c
periscope/: Cargo.toml
periscope/src/: cli.rs  config.rs  main.rs  net.rs  viewer.rs
periscope/src/skin/: display_skin.rs  mod.rs
scripts/: chara_data.js  control.js  socket.js
styles/: center.scss  comms.scss  control.scss  fonts.scss  input_display.scss  main.scss  sar.scss  side.scss
sysmodule/: Makefile  config.json  exefs.nsp  toolbox.json
sysmodule/include/: server.h  service.h
sysmodule/src/: main.c  server.c  service.c
tcp_client/: Cargo.toml
tcp_client/src/: lib.rs
