[package]
name = "periscope"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4.3", features = ["derive"]}
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"
directories = "5.0"
egui-macroquad = {version = "0.15", default-features = false}
image = "0.24"
macroquad = {version = "0.3", default-features = false}
once_cell = "1.18"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.7"
# websockets = "0.3.0"
tokio = {"version"= "1", features=["full"]}
tungstenite = "0.21.0"
url = "2.5.0"


[patch.crates-io]
# necessary to resize window on linux/x11
miniquad = {git = "https://git.periwinkle.sh/miniquad-linux-x11-resize.git"}
