[package]
name = "sar"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/austintraver/skyline-smash.git" }
ninput = { git = "https://github.com/blu-dev/ninput.git" }
bitflags = "1.2.1"
modular-bitfield = "0.11.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
